@@ -2,12 +2,12 @@
 #'
 #'GNRS returns standardized political division names (according to geonames.org).
 #' @param political_division_dataframe A properly formatted dataframe, see http://bien.nceas.ucsb.edu/bien/tools/gnrs/gnrs-api/
+#' @param batches NULL or Numeric.  Optional number of batches to divide the request into for parallel processing.
 #' @return Dataframe containing GNRS results.
 #' @note To create an empty and properly formatted dataframe, use GNRS_template()
 #' @note The fields the GNRS takes as input are titled "country", "state_province", and "county_parish" for simplicity, but these field actually refer to 0th-, 1st-, and 2nd-order political division, respectively. In the case of some exceptions (e.g. the UK) this distinction becomes important (e.g. Ireland is a 1st-order poltical division and should be treated as a "state_province" and cannot be matched as a country.)
 #' @import RCurl
-#' @importFrom jsonlite fromJSON
-#' @importFrom rjson toJSON
+#' @importFrom jsonlite toJSON fromJSON
 #' @export
 #' @examples {
 #' gnrs_testfile <- 
@@ -18,7 +18,7 @@
 #'   
 #' 
 #' }
-GNRS <- function(political_division_dataframe){
+GNRS <- function(political_division_dataframe, batches = NULL){
   
   ###############################################
   # Example use of GNRS API
@@ -27,41 +27,61 @@ GNRS <- function(political_division_dataframe){
   ###############################################
   
   # URL for GNRS API
-  url = "http://vegbiendev.nceas.ucsb.edu:8875/gnrs_ws.php"
+  url = "http://vegbiendev.nceas.ucsb.edu:8875/gnrs_api.php"
+  #url = "http://vegbiendev.nceas.ucsb.edu:8875/gnrs_ws.php"
   #url = "http://vegbiendev.nceas.ucsb.edu:9875/gnrs_ws.php" #development
   
-  # Read in example file of political division names
-  # See the BIEN website for details on how to organize a GNRS Batch Mode input file:
-  # http://bien.nceas.ucsb.edu/bien/tools/gnrs/gnrs-input-format/
-  
-  
-  # Inspect the input
-  #head(political_division_dataframe ,10)
   
   #Check that user_id is populated properly, and populate if not
 
   if(all(is.na(political_division_dataframe$user_id))){political_division_dataframe$user_id <- 1:nrow(political_division_dataframe)}
   if(any(duplicated(political_division_dataframe$user_id))){stop("user_id should be either null or populated by unique values")}         
   
+  #check that batches makes sense
   
-  # Convert to JSON
-  obs_json <- rjson::toJSON(unname(split(political_division_dataframe, 1:nrow(political_division_dataframe))))
+  #check that it its either NULL or numeric
+  if(!is.null(batches) & !is.numeric(batches)){stop("Argument 'batches' must be either NULL or a positive integer. ")}
+  
+  #check that it is a whole number greater than zero
+  if(is.numeric(batches)){ 
+    
+    
+    if(batches<=0 | batches%%1!=0){stop("Argument 'batches' must be either NULL or a positive integer.")}
+    
+    }
+  
+  # Convert the data to JSON
+  data_json <- toJSON(unname(political_division_dataframe))
+  
+  #################################
+  # Example 1: Resolve
+  #################################
+  
+  # Set API options
+  mode <- "resolve"			# Processing mode
+  
+  # Convert the options to data frame and then JSON
+  opts <- data.frame( c(mode) )
+  names(opts) <- c("mode")
+  
+  
+  if ( !is.null(batches) ){ opts$batches <- batches }
+  
+  opts_json <-  toJSON(opts)
+  opts_json <- gsub('\\[','',opts_json)
+  opts_json <- gsub('\\]','',opts_json)
+  
+  # Combine the options and data into single JSON object
+  input_json <- paste0('{"opts":', opts_json, ',"data":', data_json, '}' )
   
   # Construct the request
   headers <- list('Accept' = 'application/json', 'Content-Type' = 'application/json', 'charset' = 'UTF-8')
   
   # Send the API request
-  results_json <- postForm(url, .opts=list(postfields=obs_json, httpheader=headers))
+  results_json <- postForm(url, .opts=list(postfields= input_json, httpheader=headers))
   
-  #str(results_json)
-
-  # Convert JSON file to a data frame
-  # This takes a bit of work
-    #results <- fromJSON(results_json)
-  results <- jsonlite::fromJSON(results_json)
-    #results <- as.data.frame(do.call(rbind,results))
-    #rownames(results) <- NULL	# Reset row numbers
-  
+  # Convert JSON results to a data frame
+  results <-  fromJSON(results_json)
   
   #Re-order results to match original data
   results <- results[match(table = results$user_id,x = political_division_dataframe$user_id),]
