@@ -6,6 +6,9 @@ GNRS 0.1.1
 
 * The field "user_id" is now required to be either null or contain only unique values.
 * The field "user_id" is now used to ensure the order of the returned records match the order that was submitted.
+* The URL used by the API was updated
+* Added the option to specify the number of batches to use for processing.
+* Added GNRS_version function
 
 ===============
 GNRS 0.1.0
